# Ambient-Presence-Widget

./: .gitignore  README.md  index.html  package-lock.json  package.json  spec.md  tsconfig.json  vite.config.ts
backend/: go.mod  main.go
backend/pkg/presence/: filter.go  handler.go  hub.go  types.go
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  transport.rs
src/assets/: celebrate.json
src/components/: DebugPanel.tsx  DotCanvas.tsx  LottieOverlay.tsx
src/engine/: AnimationController.ts
src/stores/: presenceStore.ts
src/types/: animation.ts
